<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_content_title"
                android:textColor="@color/colorGrayDark"
                android:background="@null"
                android:textSize="22sp"
                android:gravity="center"
                android:id="@+id/add_daily_title"
                android:inputType="text"
                android:textSelectHandle="@mipmap/ic_texthandler"
                android:textSelectHandleLeft="@mipmap/ic_texthandler"
                android:textSelectHandleRight="@mipmap/ic_texthandler"
                android:textCursorDrawable="@null"
                android:visibility="gone"/>

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0.8dp"-->
<!--                android:background="@color/colorGrayDark"/>-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_content_text"
                android:textColor="@color/colorGrayDark"
                android:background="@null"
                android:textSize="22sp"
                android:id="@+id/add_daily_text"
                android:inputType="text"
                android:textSelectHandle="@mipmap/ic_texthandler"
                android:textSelectHandleLeft="@mipmap/ic_texthandler"
                android:textSelectHandleRight="@mipmap/ic_texthandler"
                android:textCursorDrawable="@null"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/colorGrayDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/add_select"
                    android:gravity="center" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_select_radioGroup"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:text="@string/add_select_item1"
                    android:button="@null"
                    android:textSize="17sp"
                    android:textColor="@drawable/add_radiobutton_textcolor"
                    android:id="@+id/add_select_radioGroup_item1"
                    android:background="@drawable/add_radiobutton_bg"
                    android:checked="true"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"/>

                <RadioButton
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:text="@string/add_select_item2"
                    android:button="@null"
                    android:textSize="17sp"
                    android:textColor="@drawable/add_radiobutton_textcolor"
                    android:id="@+id/add_select_radioGroup_item2"
                    android:background="@drawable/add_radiobutton_bg"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"/>

                <RadioButton
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:text="@string/add_select_item3"
                    android:button="@null"
                    android:textSize="17sp"
                    android:textColor="@drawable/add_radiobutton_textcolor"
                    android:id="@+id/add_select_radioGroup_item3"
                    android:background="@drawable/add_radiobutton_bg"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"/>

                <RadioButton
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:text="@string/add_select_item4"
                    android:button="@null"
                    android:textSize="17sp"
                    android:textColor="@drawable/add_radiobutton_textcolor"
                    android:id="@+id/add_select_radioGroup_item4"
                    android:background="@drawable/add_radiobutton_bg"
                    android:gravity="center"
                    android:layout_marginStart="10dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:textSize="17sp"
                    android:textColor="@drawable/add_radiobutton_textcolor"
                    android:id="@+id/add_select_radioGroup_customed"
                    android:background="@mipmap/ic_add_add2"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>